src/styles.css
/* ... */
.range-separator {
  display: flex;
  align-items: center;
  padding: 0 8px;
  border-top: 1px solid #d9d9d9;
  border-bottom: 1px solid #d9d9d9;
  background: #fafafa;
  user-select: none;
}

html,
body {
  min-height: 100%;
  background-color: #f5f5f5;
  margin: 0;
}


/* BEGIN utility classes */

.no-margin-top {
  margin-top: 0 !important;
}

/* Name compatible with tailwind if needed */
.w-full { width: 100%; }
.h-full { height: 100%; }
.h-auto { height: auto; }
.m-0 { margin: 0; }
.mx-auto { margin-left: auto; margin-right: auto; }
.mb-0, .ant-typography.mb-0 { margin-bottom: 0; }
.mb-4 { margin-bottom: 16px; }
.p-0 { padding: 0; }
.pb-content { padding-bottom: var(--content-padding-v); }
.flex-1 { flex: 1; }
.min-w-0 { min-width: 0; }
.float-right { float: right; }
.absolute { position: absolute; }
.relative { position: relative; }
.sticky { position: sticky; }
.block { display: block; }
.none { display: none; }
.rounded-lg { border-radius: 8px; } /* also consistent with --ant-border-radius-lg */
.rounded-xl { border-radius: 12px; }
.rounded-e-none { border-start-end-radius: 0; border-end-end-radius: 0; }
.opacity-50 { opacity: 0.50; }
.list-none { list-style-type: none; }
.cursor-pointer { cursor: pointer; }
.select-none { user-select: none; }
.font-mono { font-family: ui-monospace, monospace; }
.text-sm { font-size: 0.875rem; }
.text-base { font-size: 1rem; }
.text-center { text-align: center; }
.underline, a.underline { text-decoration-line: underline; }
.decoration-dotted { text-decoration-style: dotted; }
.italic { font-style: italic;}
.whitespace-nowrap { white-space: nowrap; }
.grow { flex-grow: 1; }
.items-stretch { align-items: stretch; }
.mb-3 { margin-bottom: 12px; }
.mt-2 { margin-top: 8px; }
.mt-3 { margin-top: 12px; }
.ml-2 { margin-left: 8px; }
.pt-2 { padding-top: 8px; }
.pt-5 { padding-top: 20px; }
.z-0 { z-index: 0; }
.self-start { align-self: flex-start; }
.text-cat-primary { color: var(--ant-color-primary, #054A74); }
.text-secondary { color: var(--text-secondary); }

/* custom, tailwind-esque */
.max-w-half-cmw { max-width: calc(var(--content-max-width) / 2); }

.shadow {
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
}

.float-btn-pos {
  /* For normal computer screens */
  bottom: 3em;
  right: 5em;
}
:not(.ant-float-btn-group).float-btn-pos {
  scale: 125%;
}
.ant-float-btn-group.float-btn-pos {
  /* For normal screens, increase float button group gap size */
  gap: 24px;
}
.ant-float-btn-group.float-btn-pos .ant-float-btn {
  scale: 125%;
}

/* TODO: antd 6.x: gray-6 */
.antd-gray-7 {
  color: #8c8c8c;
}

.error-text {
  color: #f5222d;  /* https://ant.design/docs/spec/colors red-6 */
}

.visually-hidden {
  /*
  For accessibility; visually hidden but available to screen readers. Taken from Bootstrap.

  The MIT License (MIT)

  Copyright (c) 2011-2026 The Bootstrap Authors

  Permission is hereby granted, free of charge, to any person obtaining a copy
  of this software and associated documentation files (the "Software"), to deal
  in the Software without restriction, including without limitation the rights
  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  copies of the Software, and to permit persons to whom the Software is
  furnished to do so, subject to the following conditions:

  The above copyright notice and this permission notice shall be included in
  all copies or substantial portions of the Software.

  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  THE SOFTWARE.
  */
  width: 1px !important;
  height: 1px !important;
  padding: 0 !important;
  margin: -1px !important;
  overflow: hidden !important;
  clip: rect(0, 0, 0, 0) !important;
  white-space: nowrap !important;
  border: 0 !important;
}

/* END utility classes */


.select-dataset-item {
  transition: all 0.2s;
  border-radius: 8px; /* Consistent with --ant-border-radius-lg */
  cursor: pointer;
}

.select-dataset-item .ant-avatar {
  background-color: #8c8c8c;
}

.select-dataset-item:hover {
  background-color: #e6f4ff;
}

.select-dataset-item:hover .ant-avatar {
  color: #e6f4ff;
}

.select-dataset-item.selected,
.select-dataset-item.selected:hover {
  background-color: #91caff;
}

.select-dataset-item.selected .ant-avatar {
  background-color: #0958d9;
  color: #91caff;
}


.ant-tag.filters-applied-tag {
  transition: max-width 0.2s, padding 0.2s, border-width 0.2s, opacity 0.2s, margin-left 0.2s;
  height: 22px;
  vertical-align: top;
  margin-top: 2px;
  text-wrap: nowrap;
  overflow: hidden;
  box-sizing: border-box;
  font-weight: normal;
  margin-right: 0;

  /* overridden by has-filters class when we have filters applied: */
  max-width: 0;
  padding: 0;
  border-width: 0;
  margin-left: 1px;
}
.ant-tag.filters-applied-tag.has-filters {
  max-width: 150px;
  padding: 0 7px;
  border-width: 1px;
  margin-left: 1em;
}


#scope-header {
  z-index: 20;
  box-sizing: border-box;
  min-height: 48px;
  position: sticky;
  top: 0;
  left: 0;
  right: 0;
  padding-right: var(--content-padding-h);
  background-color: rgba(250, 250, 250, 0.80);
  backdrop-filter: blur(10px);
  border-bottom: 1px solid rgb(235, 235, 235);
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.02);
}

#scope-header__sidebar-toggle {
  margin-top: 4px;
  margin-left: 4px;
  margin-right: 12px;
  color: rgba(0, 0, 0, 0.64);
}
#scope-header__sidebar-toggle.active {
  background-color: rgba(0, 0, 0, 0.20);
  color: rgba(0, 0, 0, 0.74);
}

.scoped-title {
  box-sizing: border-box;
  height: var(--content-scoped-title-height);
}
/* ... */

